--- a/helm/nodejs-app/my-node-js-app/values-dev.yaml
+++ b/helm/nodejs-app/my-node-js-app/values-dev.yaml
@@ -1,5 +1,3 @@
-
-
 # Default values for my-node-js-app.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
@@ -10,7 +8,7 @@ image:
   repository: angular-node-webapp
   pullPolicy: Never
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "v1.16.2"
 
 application:
   name: angular-webapp
