--- a/kustomize/overlays/prod/deployment.yaml
+++ b/kustomize/overlays/prod/deployment.yaml
@@ -4,7 +4,10 @@ metadata:
   name: angular-webapp
 spec:
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   replicas: 10
   template:
     spec:
